--- a/my-project/tsconfig.json
+++ b/my-project/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/components/AddTodo.js"  ],
   "exclude": [
     "node_modules"
   ]
